2004-10-26  Miguel Sofer <msofer@users.sf.net>

	* generic/tclInt.h:
	* generic/tclVar.c: removed more direct references to the VAR
	flags, replaced with access macros.

2004-10-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/expr.n: Clarified that non-num/non-bool literals require
	quoting. [Bug 1027849]. Also listed booleans as acceptable values.

2004-10-26  Kevin B. Kenny <kennykb@acm.org>

	* library/clock.tcl (FreeScan): Fixed a bug that caused relative
	days of the week in free-form [clock scan] to be evaluated in the
	wrong time zone.
	* tests/clock.test (clock-31.[456]): Made sure that there
	isn't an env(TZ) or env(TCL_TZ) lying around that will
	override the time zone that we're trying to establish with
	the simulated registry.
	Both problems reported as [Bug 1054101].
	
2004-10-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/string.n (map): Rewrote to clarify that we don't just map
	single characters. [Bug 1048005]
	* doc/info.n (procs): Clarified that the pattern argument may have
	namespace separators in it. [Bug 1047928]

	* tests/cmdAH.test (cmdAH-8.45): Simplify in the hope that the
	reasons for [Bug 1053908] will become clearer.

2004-10-25  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c (IllegalExprOperandType,TclExecuteByteCode):
	Removed several DECACHE_INFO/CACHE_INFO pairs that are no longer
	needed for protection because routines like Tcl_SetErrorCode() and
	Tcl_AddErrorInfo() can no longer re-enter bytecode execution.

	* generic/tclResult.c (TclProcessReturn): Bug fix.  Be sure that
	a missing -errorinfo option when code == TCL_ERROR causes the
	errorInfo field to get reset.

	* tests/thread.test (thread-4.4): Test depended on a ::errorInfo
	value initialized to "".  Added code to test to setup that requirement.

	* library/auto.tcl	Purged Tcl's script library of all
	* library/clock.tcl	remaining references to global vars
	* library/init.tcl	::errorInfo and ::errorCode.
