@@ -13,7 +13,7 @@
 # RCS: @(#) $Id$
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
-    package require tcltest
+    package require tcltest 2
     namespace import -force ::tcltest::*
 }
 
@@ -125,17 +125,16 @@ test init-2.7 {oad setLogCmd from safe::  - stage 2} {
 } {}
 
 
-auto_reset
-package require http 2.0
-catch {rename ::http::geturl {}}
 
-test init-2.8 {load http::geturl (package)} {
+test init-2.8 {load tcl::HistAdd} -setup {
+    auto_reset
+    catch {rename ::tcl::HistAdd {}}
+} -body {
     # 3 ':' on purpose
-    set ret [catch {http:::geturl} error]
-    # removing it, for the next test. should not fail.
-    rename ::http::geturl {} ; 
-    list $ret $error
-} {1 {wrong # args: should be "http:::geturl url args"}}
+    list [catch {tcl:::HistAdd} error] $error
+} -cleanup {
+    rename ::tcl::HistAdd {} ; 
+} -result {1 {wrong # args: should be "tcl:::HistAdd command ?exec?"}}
 
 
 test init-3.0 {random stuff in the auto_index, should still work} {
